--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,8 @@
       "react/react-in-jsx-scope": "off",
       "@typescript-eslint/explicit-module-boundary-types": "off",
       "@typescript-eslint/no-explicit-any": "warn",
-      "prettier/prettier": ["error", { "endOfLine": "auto" }]
+      "prettier/prettier": ["error", { "endOfLine": "auto" }],
+      "@typescript-eslint/no-require-imports": "off"
     },
     "settings": {
       "react": {
