--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,14 +15,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx", 
+    "jsx": "preserve",
     "incremental": true,
     "paths": {
       "@/*": [
         "./src/*"
       ]
     },
-    "types": ["jest", "@testing-library/jest-dom"],
+    "types": [],  // Vacío para producción, no se deben incluir tipos de pruebas
     "plugins": [
       {
         "name": "next"
@@ -33,8 +33,7 @@
     "**/*.ts",
     "**/*.tsx",
     "next-env.d.ts",
-    ".next/types/**/*.ts",
-    "jest.setup.js"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
